# Johnthebop

./: .gitignore  CURSOR_INSTRUCTIONS.md  LICENSE  README.md  index.html  package-lock.json  package.json  setup.sh  svelte.config.js  vite.config.js
.github/workflows/: release.yml
src/: App.svelte  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: downloader.rs  jobs.rs  main.rs  processor.rs  scrambler.rs  setup.rs  sfx.rs  utils.rs
src/assets/icons/: README.md
src/components/: Header.svelte  InputPanel.svelte  JobsPanel.svelte  SetupWizard.svelte  StatusBar.svelte
src/lib/: tauri.js
src/stores/: app.js  jobs.js
src/styles/: global.css
